--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ body {
 
 #bot {
   z-index:0;
-  background-color: #333;
+  background-image: url(art/background.png);
 }
 
 #mid {
@@ -54,8 +54,8 @@ canvas {
 
   image-rendering: optimizeQuality;
 
-  width: 640px;
-  height: 480px;
+  width: 960px;
+  height: 640px;
 /*
   cursor:none;
 */
