--- a/styles.css
+++ b/styles.css
@@ -12,15 +12,22 @@ body {
   background-color: #111;
 }
 
+html, body {
+  margin: 0;
+  padding: 0;
+  overflow: hidden; /* prevents page scrolling */
+  width: 100%;
+  height: 100%;
+}
+
 #gameContainer {
   position: relative;
   display:block;
   margin:auto;
-  max-width: 960px;
+  /*max-width: 960px;
   max-height: 640px;
   width:100%;
-  height: 100%;
-  margin-top: 3rem;
+  height: 100%;*/
 }
 #gameContainer canvas {
   position:absolute;
@@ -29,9 +36,16 @@ body {
   height: 100%;
 }
 
+canvas {
+  image-rendering: pixelated;
+  image-rendering: crisp-edges;
+}
+
 #bot {
   z-index:0;
-  background-image: url(art/background.png);
+  background-image: url(art/background4.jpg);
+  /*background: linear-gradient(132deg, rgb(65, 80, 95) 0.00%, rgb(36, 37, 38) 100.00%);*/
+  /*background: linear-gradient(132deg, rgb(1, 96, 105) 0.00%, rgb(0, 72, 95) 100.00%);*/
 }
 
 #mid {
