--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,8 @@ html, body {
   position: relative;
   display:block;
   margin:auto;
+  will-change: transform;
+
   /*max-width: 960px;
   max-height: 640px;
   width:100%;
@@ -32,18 +34,21 @@ html, body {
 #gameContainer canvas {
   position:absolute;
   /* background-color: green; */
-  width: 100%; 
-  height: 100%;
+  /*width: 100%; 
+  height: 100%;*/
 }
 
 canvas {
-  image-rendering: pixelated;
-  image-rendering: crisp-edges;
+  /*image-rendering: pixelated;*/
+  image-rendering: auto;
+
+  width: unset;
+  height: unset;
 }
 
 #bot {
   z-index:0;
-  background-image: url(art/background4.jpg);
+  /*background-image: url(art/background8.jpg);*/
   /*background: linear-gradient(132deg, rgb(65, 80, 95) 0.00%, rgb(36, 37, 38) 100.00%);*/
   /*background: linear-gradient(132deg, rgb(1, 96, 105) 0.00%, rgb(0, 72, 95) 100.00%);*/
 }
@@ -58,7 +63,7 @@ canvas {
   z-index:2;
   pointer-events: none;
 }
-canvas {
+/*canvas {
   image-rendering: crisp-edges;
   image-rendering: crisp-edges;
   image-rendering: -moz-crisp-edges;
@@ -70,7 +75,4 @@ canvas {
 
   width: 960px;
   height: 640px;
-/*
-  cursor:none;
-*/
-}
+}*/
