--- a/styles.css
+++ b/styles.css
@@ -9,16 +9,17 @@
 }
 
 body {
-  background-color: #111;
+  background-color: #dbd6d6;
 }
 
+/*
 html, body {
   margin: 0;
   padding: 0;
-  overflow: hidden; /* prevents page scrolling */
+  overflow: hidden; 
   width: 100%;
   height: 100%;
-}
+}*/
 
 #gameContainer {
   position: relative;
@@ -26,8 +27,9 @@ html, body {
   margin:auto;
   will-change: transform;
 
-  /*max-width: 960px;
-  max-height: 640px;
+  /*
+  max-width: 960px;
+  max-height: 540px;
   width:100%;
   height: 100%;*/
 }
