--- a/styles.css
+++ b/styles.css
@@ -17,8 +17,6 @@ body {
 
 h1{
   text-align: center;
-  color:#f8f8f8;
-  background-image: url(art/seamless-wood.jpg);
   margin:auto;
   width: max-content;
   padding:16px;
@@ -33,7 +31,7 @@ html, body {
   height: 100%;
 }*/
 #gameContainer {
-  position: relative;
+  /*position: relative;*/
   display:block;
   margin:auto;
   will-change: transform;
@@ -42,21 +40,20 @@ html, body {
   max-height: 540px;
   width:100%;
   height: 100%;
-
-
-
-
 }
 #gameContainer canvas {
   position:absolute;
-
-
-  /* ✅ Image border setup */
-  border: 16px solid transparent; /* border thickness = space for the image */
-  border-image-source: url("/art/seamless-wood.jpg"); /* change to your image path */
-  border-image-slice: 32;  /* how much of the image edge should be used */
-  border-image-repeat: round; /* or: stretch / repeat / round */
+/*
+  border: 16px solid transparent; 
+  border-image-source: url("/art/seamless-wood.jpg"); 
+  border-image-slice: 32; 
+  border-image-repeat: round; 
   border-radius:16px;
+  */
+
+  border-style:solid;
+  border-width:1px;
+  border-color: #000;
 }
 
 canvas {
